<resources>
    <string name="app_name">Reactivate_Movil_AndroidStudio</string>
    <string name="title_activity_main_login">MainActivityLogin</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_perfil">Crea o modfica tu perfil</string>
    <string name="nombre_compania">nombre_compania</string>
    <string name="nombre_categoria">nombre_categoria</string>
    <string name="nostring">NoString</string>
    <string name="strContacto">Contacto</string>
    <string name="nombre_de_la_compa_ia">Nombre de la Compañia</string>
    <string name="categoria_de_servicio">Categoria de Servicio</string>
    <string name="persona_de_contacto">Persona de Contacto</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="db_drop_ServicioCategoria">DROP TABLE IF EXIST</string>
    <string name="aqui_va_el_nombre_de_la_categoria">aqui va el nombre de la categoria</string>
    <string name="ir_a_prueba">ir a prueba</string>
    <string-array name="CategoriasServicoStrArray">
        <item>----Selecciona una categoria----</item>
        <item>Abogados</item>
        <item>Construccion</item>
        <item>Asesores Contables</item>
        <item>Cuidado de Muebles</item>
        <item>Cuidado de Mascotas</item>
        <item>Electricistas</item>
        <item>Gimnasios</item>
        <item>Atencion de Eventos</item>
        <item>Plomeros</item>
        <item>Profesores</item>
        <item>Restaurantes</item>
        <item>Servicios de Salud</item>
        <item>Servicios de Limpieza</item>
        <item>Servicios de Marketing Digitas</item>
        <item>Servicios Odontologicos</item>
        <item>Servicios en Tecnologia</item>
    </string-array>
</resources>