<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleServicioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        android:padding="5dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/Login_ImgV1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/reactivate_logo_transp_929x172" />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/abogado_04" />

            <TextView
                android:id="@+id/tvCompania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textColor="#979797"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/nombre_de_la_compa_ia" />
            <EditText
                android:id="@+id/etCompania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textColor="#979797"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/categoria_de_servicio" />

            <EditText
                android:id="@+id/etCategoriaServicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
            <TextView
                android:id="@+id/tvdescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textColor="#979797"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Description" />
            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/etpersonaContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:drawableStart="@drawable/ic_persona_24"
                android:hint="@string/persona_de_contacto" />


            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:drawableStart="@drawable/ic_phone_24"
                android:hint="@string/telefono" />
            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:drawableStart="@drawable/ic_email_24"
                android:hint="@string/correo" />

            <Button
                android:id="@+id/btnContactar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contactar"
                android:onClick="Contactar"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>